--- a/notebooks/deployment.ipynb
+++ b/notebooks/deployment.ipynb
@@ -4,14 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BoxBunny Deployment & Operation\n",
-    "Use this notebook to build, calibrate, and run the boxing robot system.\n",
+    "# BoxBunny Deployment\n",
     "\n",
-    "**Workflow:**\n",
-    "1. **Setup**: Configure environment.\n",
-    "2. **Build**: Compile ROS workspace (if code changed).\n",
-    "3. **Calibrate**: Tune IMU for punches.\n",
-    "4. **Launch**: Run the Action Recognition System.\n"
+    "Production deployment notebook for the boxing robot training system.\n",
+    "\n",
+    "## Quick Start\n",
+    "1. Run **Environment Setup** (Cell 1)\n",
+    "2. Run **Build Workspace** (Cell 2) - only needed after code changes\n",
+    "3. Run **Launch System** (Cell 3) - starts everything!\n",
+    "\n",
+    "## Features\n",
+    "- **Reaction Drill**: Test reflexes with random punch cues\n",
+    "- **Shadow Sparring**: Practice punch combos\n",
+    "- **Defence Drill**: Block incoming attacks\n",
+    "- **AI Coach**: LLM-powered trash talk and encouragement\n",
+    "\n",
+    "## Detection Modes\n",
+    "| Mode | Description | Default |\n",
+    "|------|-------------|---------|\n",
+    "| 🎨 **Color Tracking** | Fast, uses glove colors (Red=Jab, Green=Cross) | ✅ Yes |\n",
+    "| 🤖 **Action Model** | AI-powered pose detection (requires GPU) | ❌ Experimental |\n",
+    "| 📡 **IMU Sensor** | Glove accelerometer for punch force | ❌ Experimental |"
    ]
   },
   {
@@ -19,7 +32,7 @@
    "metadata": {},
    "source": [
     "## 1. Environment Setup\n",
-    "Generates the environment file used by all subsequent commands."
+    "Creates the shell environment script. **Run this first every session.**"
    ]
   },
   {
@@ -33,11 +46,12 @@
     "source ~/miniconda3/etc/profile.d/conda.sh\n",
     "conda activate boxing_ai\n",
     "export PYTHONNOUSERSITE=1\n",
+    "export LD_LIBRARY_PATH=$CONDA_PREFIX/lib:$LD_LIBRARY_PATH\n",
     "export SETUPTOOLS_USE_DISTUTILS=stdlib\n",
     "source /opt/ros/humble/setup.bash\n",
     "source /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/install/setup.bash 2>/dev/null || true\n",
     "SH\n",
-    "echo \"Environment ready at /tmp/boxbunny_env.sh\""
+    "echo \"✅ Environment ready\""
    ]
   },
   {
@@ -45,7 +59,7 @@
    "metadata": {},
    "source": [
     "## 2. Build Workspace\n",
-    "Run this if you have modified any C++ or ROS nodes."
+    "Compiles all ROS packages. **Only needed after code changes.**"
    ]
   },
   {
@@ -54,17 +68,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-    "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
-    "  colcon build --symlink-install'"
+    "%%bash\n",
+    "source /tmp/boxbunny_env.sh\n",
+    "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws\n",
+    "colcon build --symlink-install\n",
+    "source install/setup.bash\n",
+    "echo \"✅ Build complete\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Calibrate IMU\n",
-    "Launch this GUI to calibrate the punch thresholds. **Close it when done.**"
+    "## 3. 🚀 Launch BoxBunny System (Default Mode)\n",
+    "This is the **main deployment command**. Launches everything with Color Tracking (default, fast & reliable).\n",
+    "\n",
+    "**What starts:**\n",
+    "- 📷 RealSense Camera (RGB + Depth)\n",
+    "- 🎨 Color-based Glove Tracker (Red=Jab, Green=Cross)\n",
+    "- 🎯 Reaction Drill Manager\n",
+    "- 📊 Punch Analytics\n",
+    "- 💬 AI Coach (LLM trash talk & encouragement)\n",
+    "- 🖥️ Main GUI (fullscreen)"
    ]
   },
   {
@@ -73,16 +98,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bash -lc 'source /tmp/boxbunny_env.sh && ros2 run boxbunny_imu imu_punch_gui'"
+    "%%bash\n",
+    "source /tmp/boxbunny_env.sh\n",
+    "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws\n",
+    "source install/setup.bash\n",
+    "\n",
+    "# Default deployment: Color Tracking + LLM Coach\n",
+    "ros2 launch boxbunny_bringup boxbunny_deploy.launch.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Run Action Recognition (Hybrid Mode)\n",
-    "Launches the main GUI with **YOLO Nano (Pose)** and **IMU Fusion**.\n",
-    "Click **[Calibrate IMU]** in the GUI if you haven't done step 3."
+    "---\n",
+    "## 🧪 Experimental Modes (Optional)\n",
+    "\n",
+    "### 4a. Launch with AI Action Model\n",
+    "Uses YOLO Pose + ML model for more accurate punch detection. **Requires GPU.**"
    ]
   },
   {
@@ -91,23 +124,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-    "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/action_prediction && \\\n",
-    "  python tools/inference/live_infer_rgbd.py \\\n",
-    "    --model-config configs/rgbd_boxing_anticipation.py \\\n",
-    "    --model-checkpoint /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/models/action_prediction_model/best_acc_82.4_epoch_161.pth \\\n",
-    "    --yolo-model checkpoints/yolo26n.pt \\\n",
-    "    --fps 30 \\\n",
-    "    --rgb-res 640x480 \\\n",
-    "    --depth-res 640x480'"
+    "%%bash\n",
+    "source /tmp/boxbunny_env.sh\n",
+    "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws\n",
+    "source install/setup.bash\n",
+    "\n",
+    "# Experimental: Action Model mode (GPU required)\n",
+    "ros2 launch boxbunny_bringup boxbunny_deploy.launch.py detection_mode:=action"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Full ROS System (Deployment)\n",
-    "Launch the entire robot stack (LLM, Vision, Drill Manager, etc)."
+    "### 4b. Launch with IMU Sensor\n",
+    "Adds glove-mounted accelerometer for punch force measurement. **Requires MPU6050 hardware.**"
    ]
   },
   {
@@ -116,9 +147,211 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-    "  ros2 launch boxbunny_bringup boxbunny_system.launch.py \\\n",
-    "  enable_imu:=true enable_llm:=true enable_gui:=true'"
+    "%%bash\n",
+    "source /tmp/boxbunny_env.sh\n",
+    "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws\n",
+    "source install/setup.bash\n",
+    "\n",
+    "# Experimental: With IMU sensor\n",
+    "ros2 launch boxbunny_bringup boxbunny_deploy.launch.py enable_imu:=true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ebe47ca",
+   "metadata": {},
+   "source": [
+    "### 4c. Full Experimental Mode (Action Model + IMU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89e30790",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "source /tmp/boxbunny_env.sh\n",
+    "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws\n",
+    "source install/setup.bash\n",
+    "\n",
+    "# Full experimental: Action Model + IMU\n",
+    "ros2 launch boxbunny_bringup boxbunny_deploy.launch.py detection_mode:=action enable_imu:=true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa052b1b",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 📖 System Architecture Reference\n",
+    "\n",
+    "### ROS2 Nodes Overview\n",
+    "| Node | Package | Purpose | Topic/Service |\n",
+    "|------|---------|---------|---------------|\n",
+    "| `realsense2_camera_node` | realsense2_camera | RGB-D camera driver | `/camera/color/image_raw`, `/camera/depth/image_rect_raw` |\n",
+    "| `realsense_glove_tracker` | boxbunny_vision | Color-based punch detection | Publishes: `glove_detections`, `punch_events` |\n",
+    "| `punch_fusion_node` | boxbunny_fusion | Combines vision + IMU data | Publishes: `punch_events` (fused) |\n",
+    "| `reaction_drill_manager` | boxbunny_drills | Manages drill state machine | `drill_state`, `drill_summary`, Services: `start_stop_drill` |\n",
+    "| `punch_stats_node` | boxbunny_analytics | Tracks punch statistics | Subscribes to punch events |\n",
+    "| `trash_talk_node` | boxbunny_llm | AI Coach (encouragement/trash talk) | `trash_talk`, Service: `llm/generate` |\n",
+    "| `mpu6050_node` | boxbunny_imu | IMU sensor driver (experimental) | `imu/data`, `imu/debug` |\n",
+    "| `imu_punch_classifier` | boxbunny_imu | Classifies punches from IMU (experimental) | `imu/punch` |\n",
+    "\n",
+    "### Key Topics for Integration\n",
+    "```\n",
+    "# Get real-time punch events\n",
+    "ros2 topic echo /punch_events\n",
+    "\n",
+    "# Get player height (after calibration)\n",
+    "ros2 topic echo /player_height\n",
+    "\n",
+    "# Get AI coach messages\n",
+    "ros2 topic echo /trash_talk\n",
+    "\n",
+    "# Get drill state\n",
+    "ros2 topic echo /drill_state\n",
+    "```\n",
+    "\n",
+    "### LLM Coach Integration\n",
+    "The AI Coach (`trash_talk_node`) provides:\n",
+    "- **Encouragement**: Positive feedback after good punches\n",
+    "- **Trash Talk**: Playful taunts to motivate the user\n",
+    "- **Analysis**: Performance insights after drills\n",
+    "- **Coaching**: Technical tips based on punch patterns\n",
+    "\n",
+    "To request custom LLM responses:\n",
+    "```python\n",
+    "# From your code:\n",
+    "from boxbunny_msgs.srv import GenerateLLM\n",
+    "# modes: \"coach\", \"encourage\", \"trash\", \"analysis\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaefadc8",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 🔧 Troubleshooting & Utilities\n",
+    "\n",
+    "### Check Node Status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4d2ce3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "source /tmp/boxbunny_env.sh\n",
+    "echo \"=== Active ROS2 Nodes ===\"\n",
+    "ros2 node list 2>/dev/null || echo \"No ROS2 nodes running\"\n",
+    "echo \"\"\n",
+    "echo \"=== Active Topics ===\"\n",
+    "ros2 topic list 2>/dev/null || echo \"No topics available\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71c3b939",
+   "metadata": {},
+   "source": [
+    "### Kill All BoxBunny Processes\n",
+    "Run this if the system gets stuck or you need a clean restart."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5290956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "echo \"Killing BoxBunny processes...\"\n",
+    "pkill -f \"boxbunny\" || true\n",
+    "pkill -f \"realsense2_camera\" || true\n",
+    "pkill -f \"live_infer_rgbd\" || true\n",
+    "pkill -f \"gui_main\" || true\n",
+    "sleep 1\n",
+    "echo \"✅ All processes killed\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0372bbfd",
+   "metadata": {},
+   "source": [
+    "### Test RealSense Camera\n",
+    "Quick check to verify the camera is connected and working."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab6373da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "source /tmp/boxbunny_env.sh\n",
+    "echo \"=== RealSense Camera Check ===\"\n",
+    "rs-enumerate-devices 2>/dev/null | head -20 || echo \"❌ RealSense SDK not found or no camera connected\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7e61596",
+   "metadata": {},
+   "source": [
+    "### Launch GUI Only (Standalone)\n",
+    "If you need to restart just the GUI without restarting the ROS nodes. **Note:** Uses conda Python directly due to PySide6/Qt compatibility."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a8165ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "source /tmp/boxbunny_env.sh\n",
+    "\n",
+    "# GUI must run with conda Python (not ros2 run) due to Qt ABI requirements\n",
+    "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws\n",
+    "python src/boxbunny_gui/boxbunny_gui/gui_main.py &\n",
+    "echo \"✅ GUI launched\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01097a39",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 📋 Development Notes\n",
+    "\n",
+    "### Known Issues & Solutions\n",
+    "| Issue | Solution |\n",
+    "|-------|----------|\n",
+    "| GUI crashes with Qt error | Run GUI directly with `python gui_main.py` instead of `ros2 run` |\n",
+    "| Camera not detected | Run `cleanup_camera.sh` then reconnect USB |\n",
+    "| LLM responses slow | Ensure Ollama is running: `ollama serve` |\n",
+    "| Action model not loading | Check GPU memory, may need to reduce batch size |\n",
+    "\n",
+    "### File Locations\n",
+    "- **Main GUI**: `src/boxbunny_gui/boxbunny_gui/gui_main.py`\n",
+    "- **Launch Files**: `src/boxbunny_bringup/launch/`\n",
+    "- **Vision Nodes**: `src/boxbunny_vision/boxbunny_vision/`\n",
+    "- **Drill Logic**: `src/boxbunny_drills/boxbunny_drills/`\n",
+    "- **Models**: `models/checkpoints/` (YOLO), `models/action_prediction_model/` (Action classifier)"
    ]
   }
  ],
