--- a/notebooks/deployment.ipynb
+++ b/notebooks/deployment.ipynb
@@ -14,7 +14,7 @@
     "3. Run **Launch System** (Cell 3) - starts everything!\n",
     "\n",
     "## Features\n",
-    "- **Reaction Drill**: Test reflexes with random punch cues\n",
+    "- **Reaction Drill**: Test reflexes with random punch cues (uses YOLO Pose detection)\n",
     "- **Shadow Sparring**: Practice punch combos\n",
     "- **Defence Drill**: Block incoming attacks\n",
     "- **AI Coach**: LLM-powered trash talk and encouragement\n",
@@ -22,8 +22,9 @@
     "## Detection Modes\n",
     "| Mode | Description | Default |\n",
     "|------|-------------|---------|\n",
-    "| 🎨 **Color Tracking** | Fast, uses glove colors (Red=Jab, Green=Cross) | ✅ Yes |\n",
-    "| 🤖 **Action Model** | AI-powered pose detection (requires GPU) | ❌ Experimental |\n",
+    "| 🎯 **Pose Detection** | YOLO Pose tracks wrist velocity for reaction timing | ✅ Always On |\n",
+    "| 🎨 **Color Tracking** | Fast glove colors (Red=Left, Green=Right) for display | ✅ Yes |\n",
+    "| 🤖 **Action Model** | ML classifier for punch type prediction | ❌ Experimental |\n",
     "| 📡 **IMU Sensor** | Glove accelerometer for punch force | ❌ Experimental |"
    ]
   },
